<resources>
    <string name="app_name">FindPet</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_to_findpet">Welcome</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="log_out">Log out</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="register_new_account">Register new user</string>
    <string name="dashboard">Dashboard</string>
    <string name="map">Map</string>
    <string name="message">Messages</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="user">User Settings</string>
    <string name="call">CALL</string>
    <string name="view_on_map">VIEW</string>
    <string name="send_message">MESSAGE</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="fullname">Full Name</string>
    <string name="update_user">UPDATE USER</string>
    <string name="add_post">Add post</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="location_service_settings">Location Service Settings</string>
    <string name="network_based_location">Network Based Location </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_photo">Add photo</string>
    <string name="add_short_description">Add short description</string>
    <string name="pet_name">Pet name</string>
    <string name="add_new_post">Add New Post</string>
    <string name="apply_filters">APPLY FILTERS</string>
    <string name="clear_filters">CLEAR FILTERS</string>
    <string name="friends">Friends</string>
    <string name="pets">Pets</string>
    <string name="progressDialogTitle">please wait ...</string>
    <string name="spinnerPlaceholder">all</string>
    <string name="preparing_map">Preparing map, please wait...</string>
    <string name="filtering">Filtering...</string>
    <string name="show_other_users">Show other users</string>
    <string name="pet_result_first_part">"Founded "</string>
    <string name="pet_result_second_part">" pets."</string>
    <string name="radius">Radius</string>
    <string name="accept_friend_request">Accept request</string>
    <string name="refuse_friend_request">Refuse request</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="send_friend_request">Send friend request</string>

</resources>