<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_main">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_dashboard"
            android:title="@string/dashboard"
            android:icon="@drawable/ic_baseline_dashboard_24"/>
        <item android:id="@+id/nav_friends"
            android:title="@string/friends"
            android:icon="@drawable/ic_person_pin_24"/>
        <item android:id="@+id/nav_pets"
            android:title="@string/pets"
            android:icon="@drawable/ic_pets_24"/>
        <item android:id="@+id/nav_message"
            android:title="@string/message"
            android:icon="@drawable/ic_baseline_message_24"/>
        <item android:id="@+id/nav_user"
            android:title="@string/user"
            android:icon="@drawable/ic_baseline_supervised_user_circle_24"/>
        <item android:id="@+id/nav_log_out"
            android:title="@string/log_out"
            android:icon="@drawable/ic_baseline_exit_to_app_24"/>
    </group>

<!--    <item android:title="Account">-->
<!--        <menu>-->
<!--            <item android:id="@+id/nav_user"-->
<!--                android:title="@string/user"-->
<!--                android:icon="@drawable/ic_baseline_supervised_user_circle_24"/>-->
<!--            <item android:id="@+id/nav_log_out"-->
<!--                android:title="@string/log_out"-->
<!--                android:icon="@drawable/ic_baseline_exit_to_app_24"/>-->
<!--        </menu>-->
<!--    </item>-->

</menu>