<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Theme.FindPet"
    android:padding="@dimen/fragmentPadding">

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/userSettings_userImage"
        android:layout_height="@dimen/userSettings_userImage"
        app:cardCornerRadius="250dp"
        app:cardBackgroundColor="@color/white"
        android:layout_centerHorizontal="true"
        android:id="@+id/appSettings_profilePictureContainer">

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/userSettings_userImage"
            android:layout_height="@dimen/userSettings_userImage"
            app:cardCornerRadius="250dp"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/userSettings_profilePicture"
                android:layout_width="@dimen/userSettings_userImage"
                android:layout_height="@dimen/userSettings_userImage"
                android:src="@mipmap/ic_launcher_round"
                android:scaleType="centerCrop"/>

        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/userSettings_btnChangeProfilePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appSettings_profilePictureContainer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/fab_margin"
        android:background="@drawable/round_button"
        android:paddingLeft="@dimen/fragmentPadding"
        android:paddingRight="@dimen/fragmentPadding"
        android:text="@string/change_profile_picture"
        android:textColor="@color/design_default_color_on_primary" />

    <LinearLayout
        android:layout_width="354dp"
        android:layout_height="397dp"
        android:layout_marginTop="@dimen/fab_margin"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/userSettings_btnChangeProfilePicture"
        >

        <EditText
            android:id="@+id/userSettings_fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_input"
            android:hint="@string/fullname"
            android:textColor="@color/design_default_color_primary"
            android:textColorHint="@color/design_default_color_primary" />

        <EditText
            android:id="@+id/userSettings_phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_input"
            android:hint="@string/phone_number"
            android:textColor="@color/design_default_color_primary"
            android:textColorHint="@color/design_default_color_primary" />


        <Button
            android:id="@+id/userSettings_btnUpdateUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:text="@string/update_user"
            android:textColor="@color/design_default_color_on_primary"
            android:layout_marginTop="@dimen/fab_margin"/>
    </LinearLayout>

</RelativeLayout>