<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".GetStartedActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="192dp"
        android:layout_height="56dp"
        android:text="@string/welcome_to_findpet"
        android:textColor="@color/white"
        android:textFontWeight="400"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091" />

    <ImageView
        android:layout_width="256dp"
        android:layout_height="113dp"
        android:src="@drawable/find_pet_title"
        app:layout_constraintBottom_toTopOf="@+id/registerActivityBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.875" />

    <Button
        android:id="@+id/registerActivityBtn"
        android:layout_width="243dp"
        android:layout_height="48dp"
        android:background="@drawable/rounded_button"
        android:text="@string/register"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/loginActivityBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.972" />

    <Button
        android:id="@+id/loginActivityBtn"
        android:layout_width="243dp"
        android:layout_height="48dp"
        android:layout_marginBottom="68dp"
        android:background="@drawable/rounded_button"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>