<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/container_padding">

    <RelativeLayout
        android:id="@+id/post_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/post_padding">

        <RelativeLayout
            android:id="@+id/post_profileCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true">

            <androidx.cardview.widget.CardView
                android:id="@+id/post_userImageContainer"
                android:layout_width="@dimen/post_userImage"
                android:layout_height="@dimen/post_userImage"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="250dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="@dimen/post_userImage"
                    android:layout_height="@dimen/post_userImage"
                    android:layout_gravity="center"
                    app:cardCornerRadius="250dp">

                    <ImageView
                        android:id="@+id/post_userImage"
                        android:layout_width="@dimen/post_userImage"
                        android:layout_height="@dimen/post_userImage"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/ic_launcher_round" />

                </androidx.cardview.widget.CardView>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/post_userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/post_userImageContainer"
                android:text="UserName"
                android:textColor="@color/design_default_color_primary" />
        </RelativeLayout>


        <TextView
            android:id="@+id/post_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:drawableStart="@drawable/ic_baseline_access_time_24"
            android:drawablePadding="@dimen/drawablePadding"
            android:text="1h ago"
            android:textColor="@color/design_default_color_primary" />
    </RelativeLayout>

    <TextView
        android:id="@+id/post_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/post_header"
        android:text="Izgubljen je pas star oko 2 godine, odaziva se na ime Džeki."
        android:textColor="@color/design_default_color_primary" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/post_imageContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/post_text"
        android:padding="10dp">

        <ImageView
            android:id="@+id/post_postImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/post_buttonsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/post_imageContainer"
        android:orientation="horizontal">

        <Button
            android:id="@+id/post_btnCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:background="transparent"
            android:drawableStart="@drawable/ic_baseline_local_phone_24"
            android:text="@string/call"
            android:textColor="@color/design_default_color_primary" />

        <Button
            android:id="@+id/post_btnMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="transparent"
            android:drawableStart="@drawable/ic_baseline_message_24"
            android:drawablePadding="@dimen/drawablePadding"
            android:text="@string/send_message"
            android:textColor="@color/design_default_color_primary" />

        <Button
            android:id="@+id/post_btnShowOnMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="transparent"
            android:drawableStart="@drawable/ic_location_on_24"
            android:drawablePadding="@dimen/drawablePadding"
            android:text="@string/view_on_map"
            android:textColor="@color/design_default_color_primary" />

    </RelativeLayout>


</RelativeLayout>